HeroBlock button Alignment tab issue fixes

--- a/html/sass/pages/about.scss
+++ b/html/sass/pages/about.scss
@@ -177,7 +177,7 @@
             @include bp(landscape) {
                 font-size: 18px;
                 min-width: 160px;
-                min-height: auto;
+                min-height: 56px;
                 line-height: 25px;
                 padding: 3px 8px 3px 70px;
                 margin: 0 14px;
